Fix position covers

--- a/_src/assets/scss/layout/_about.scss
+++ b/_src/assets/scss/layout/_about.scss
@@ -3,17 +3,20 @@
   width: 100%;
   background-color: #252525;
   &__cover{
+    top: 0;
+    display: table;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-transform: uppercase;
     color: white;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color:#f7484e;
   }
   &__content {
+    background-color: #00000075;
     background-color: #252525;
     color: white;
     //color: #0c0c0c;
@@ -23,9 +26,11 @@
       color:  #0c0c0c;
       color: white;
       &--box {
-        box-shadow: 5px 5px 5px #2f434470;
-        border-bottom: 1px solid #33323242;
-        border-left: 1px solid #33323242;
+        background-color: #27272773;
+        //box-shadow: 5px 5px 5px #2f434470;
+        box-shadow: #000000b5 5px 5px 5px;
+        border-bottom: 2px solid #00000042;
+        border-left: 2px solid #00000042;
         .bootcamp-view {
           display: flex;
           flex-direction: row;
@@ -108,6 +113,10 @@
       border: 3px solid #33323242;
       padding: 8px;
       box-shadow: 5px 5px 5px #2f434470;
+      box-shadow: #000000b5 5px 5px 5px;
+        border: 3px solid #00000042;
+        background: linear-gradient(0deg, rgba(39,39,39,1) 0%, rgba(37,37,37,1) 100%);
+
       a {
         color:  #0c0c0c;
         color: white;
@@ -120,6 +129,7 @@
     &__cover{
       width: 50vw;
       height: 100vh;
+      position: sticky;
     }
     &__content{
       width: 50vw;
