--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -7,9 +7,9 @@ span {
 }
 
 .header {
-  width: 100vw;
+  width: 100%;
   height: 60px;
-  //padding: 0 24px;
+  padding-right: 24px;
   position: fixed;
   display: flex;
   flex-direction: row;
@@ -20,6 +20,7 @@ span {
   font-family: 'Quicksand', sans-serif;
   //opacity: 1;
   z-index: 999;
+  margin: 0;
   .navigationAuthor {
     display: flex;
     flex-direction: row;
@@ -45,7 +46,7 @@ span {
       background-color: #0202020d;
       text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.966);
       border: 1px solid white;
-      margin-right: 10px;
+      //margin-right: 10px;
       padding: 5px;
     z-index: 10;
     opacity: .85;
@@ -115,7 +116,7 @@ span {
       font-size: 40px;
       letter-spacing:10px;
       color: white;
-      width: 100%;
+      width: 100vw;
       text-align: center;
       opacity:0;
       transition: .4s;
@@ -188,7 +189,7 @@ span {
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
-    width: 100%; }
+    width: 100vw; }
   
   .navigation__item {
     display: inline-block;
@@ -219,7 +220,7 @@ span {
   
   .navigation__checkbox:checked ~ .navigation__nav {
     opacity: 1;
-    width: 100%; }
+    width: 100vw; }
   
   .navigation__icon {
     position: relative;
