--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -70,7 +70,10 @@
   padding: 0;}
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  //overflow-x: hidden;
+  //max-width: 100%;
+}
 li {
   list-style: none;
 }
@@ -93,6 +96,8 @@ body {
   margin: 0;
   border: none;
   .main {
+    //display: flex;
+
     background-color: #252525;
     color: white;
     border: none;
@@ -109,27 +114,44 @@ body {
       display: flex;
       flex-direction: column;
       .frontend-wrapper {
-        border: 3px solid #33323242;
+        //border: 3px solid #33323242;
         padding: 8px;
-        box-shadow: 5px 5px 5px #2f434470;
+        //box-shadow: 5px 5px 5px #2f434470;
         margin-bottom: 18px;
+        ///@at-root
+        //background-color: #27272773;
+        //box-shadow: 5px 5px 5px #2f434470;
+        box-shadow: #000000b5 5px 5px 5px;
+        border: 3px solid #00000042;
+        background: linear-gradient(0deg, rgba(39,39,39,1) 0%, rgba(37,37,37,1) 100%);
+
       }
       .graphic-design-wrapper {
         border: 3px solid #33323242;
         padding: 6px;
         box-shadow: 5px 5px 5px #2f434470;
         margin-bottom: 18px;
+        box-shadow: #000000b5 5px 5px 5px;
+        border: 3px solid #00000042;
+        background: linear-gradient(0deg, rgba(39,39,39,1) 0%, rgba(37,37,37,1) 100%);
+
       }
       .seo-wrapper {
         border: 3px solid #33323242;
         padding: 10px;
         box-shadow: 5px 5px 5px #2f434470;
+        box-shadow: #000000b5 5px 5px 5px;
+        border: 3px solid #00000042;
+        background: linear-gradient(0deg, rgba(39,39,39,1) 0%, rgba(37,37,37,1) 100%);
+
         .skillsWraper {
           .skills{
             width: 107px;
           margin: 2px;
           font-size: 14px;
           margin-top: 5px;
+          background-color: #232222;
+          border: 2px solid #1d1c1c94;
 
           }
         }
@@ -176,10 +198,12 @@ body {
         margin-top: 8px;
         flex-wrap: wrap;
         .skill {
+          background-color: #232222;
           width: 107px;
           margin: 2px;
           font-size: 14px;
           margin-top: 5px;
+          border: 2px solid #1d1c1c94;
         }
         li {
 
@@ -203,7 +227,7 @@ body {
     }
     &__contact {
       color: #0c0c0c;
-      width: 100vw;
+      width: 100%;
         &__cover{
           display: flex;
           justify-content: center;
@@ -211,7 +235,7 @@ body {
           flex-direction: column;
           text-transform: uppercase;
           color: white;
-          width: 100vw;
+          width: 100%;
           height: 100vh;
           background-color:#f7484e;
           .navigation-contact {
@@ -269,7 +293,7 @@ body {
     }
 
     &__work {
-      width: 100vw;
+      width: 100%;
       color: black;
       background-color: #fff;
       background-color: #252525;
@@ -280,7 +304,7 @@ body {
         flex-direction: column;
         text-transform: uppercase;
         color: white;
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         background-color:#292929;;
         .navigation-work {
@@ -671,7 +695,7 @@ body {
        
       }
       .adalab-about-us{
-        width: 100vw;
+        width: 100%;
         display:flex;
         justify-content: center;
         position: relative;
@@ -774,7 +798,7 @@ body {
   .proyect {
     display: flex;
 flex-direction: row;
-width: 100vw;
+width: 100%;
   }
   .image{
     width: 50vw;
